--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Minimal Portfolio</title>
+  <title>publicacioneslasordat</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -17,8 +17,8 @@
   </nav>
 
   <header>
-    <h1>My Minimal Portfolio</h1>
-    <p>Clean. Simple. Personal.</p>
+    <h1>publicacioneslasorda</h1>
+    <p>fabulas sin moraleja</p>
   </header>
 
   <main>
