--- a/index.html
+++ b/index.html
@@ -1,56 +1,116 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>publicacioneslasordat</title>
-  <link rel="stylesheet" href="style.css" />
+<title>Studio 980</title>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<link href="css/global.css" rel="stylesheet" type="text/css" media="screen" charset="utf-8" />
 </head>
 <body>
-
-  <nav>
+<!-- BEGIN WRAPPER -->
+<div id="wrapper">
+  <!-- BEGIN LOGO -->
+  <div id="logo"> <a href="#"><img src="img/logo.png" alt="" /></a> </div>
+  <!-- END LOGO -->
+  <!-- BEGIN NAV -->
+  <div id="nav">
     <ul>
-      <li><a href="#about">About</a></li>
-      <li><a href="#portfolio">Portfolio</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="#">Page 1</a></li>
+      <li>/</li>
+      <li><a href="#">Page 2</a></li>
+      <li>/</li>
+      <li><a href="#">Page 3</a></li>
+      <li>/</li>
+      <li><a href="#">Page 4</a></li>
     </ul>
-  </nav>
-
-  <header>
-    <h1>publicacioneslasorda</h1>
-    <p>fabulas sin moraleja</p>
-  </header>
-
-  <main>
-    <section id="about">
-      <h2>About</h2>
-      <p>This is a minimalist personal page, perfect for showcasing work and connecting with others.</p>
-    </section>
-
-    <section id="portfolio">
-      <h2>Portfolio</h2>
-      <div class="grid">
-        <div class="card"><h3>Project 1</h3><p>Description here</p></div>
-        <div class="card"><h3>Project 2</h3><p>Description here</p></div>
-        <div class="card"><h3>Project 3</h3><p>Description here</p></div>
-        <div class="card"><h3>Project 4</h3><p>Description here</p></div>
-      </div>
-    </section>
-
-    <section id="contact">
-      <h2>Contact</h2>
-      <form name="contact" method="POST" data-netlify="true">
-        <input type="text" name="name" placeholder="Your Name" required />
-        <input type="email" name="email" placeholder="Your Email" required />
-        <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-        <button type="submit">Send</button>
+  </div>
+  <!-- END NAV -->
+  <!-- BEGIN OVERVIEW -->
+  <div id="overview">
+    <h1>Studio980 is a <a href="#">free XHTML/CSS template</a> by <a href="#">Skyrocket Labs</a>. It's suitable for a simple portfolio site or a media gallery.</h1>
+  </div>
+  <!-- END OVERVIEW -->
+  <!-- BEGIN MAIN -->
+  <div id="main">
+    <div class="left">
+      <h3><a href="#">Cras placerat volutpat nisi vel hendrerit</a></h3>
+      <img src="img/1.jpg" alt="" />
+      <p><a href="#" class="btn">Praesent cursus ipsum &raquo;</a></p>
+    </div>
+    <div class="right">
+      <h3><a href="#">Cras placerat volutpat nisi vel hendrerit</a></h3>
+      <img src="img/2.jpg" alt="" />
+      <p><a href="#" class="btn">Praesent cursus ipsum &raquo;</a></p>
+    </div>
+    <br class="clearit" />
+    <div class="left">
+      <h3><a href="#">Cras placerat volutpat nisi vel hendrerit</a></h3>
+      <img src="img/3.jpg" alt="" />
+      <p><a href="#" class="btn">Praesent cursus ipsum &raquo;</a></p>
+    </div>
+    <div class="right">
+      <h3><a href="#">Cras placerat volutpat nisi vel hendrerit</a></h3>
+      <img src="img/4.jpg" alt="" />
+      <p><a href="#" class="btn">Praesent cursus ipsum &raquo;</a></p>
+    </div>
+    <div class="left">
+      <h3><a href="#">Cras placerat volutpat nisi vel hendrerit</a></h3>
+      <img src="img/5.jpg" alt="" />
+      <p><a href="#" class="btn">Praesent cursus ipsum &raquo;</a></p>
+    </div>
+    <div class="right">
+      <h3><a href="#">Cras placerat volutpat nisi vel hendrerit</a></h3>
+      <img src="img/6.jpg" alt="" />
+      <p><a href="#" class="btn">Praesent cursus ipsum &raquo;</a></p>
+    </div>
+    <div class="left">
+      <h3>Cras placerat volutpat nisi vel hendrerit</h3>
+      <p>Nunc vitae diam nisi, non viverra erat. Vestibulum et justo mauris. Integer sit amet urna vel neque dictum rhoncus. Quisque a volutpat magna. Nunc fringilla varius mauris, at faucibus sem egestas in.</p>
+      <form action="#" method="post">
+        <fieldset>
+          <label for="name">Name</label>
+          <input type="text" id="name" size="35" class="field" />
+          <label for="email">Email</label>
+          <input type="text" id="email" size="35" class="field" />
+          <input type="submit" value="Subscribe" class="button" />
+        </fieldset>
       </form>
-    </section>
-  </main>
-
-  <footer>
-    <p>© 2025 Your Name</p>
-  </footer>
-
+    </div>
+    <div class="right">
+      <h3>Cras placerat volutpat nisi vel hendrerit</h3>
+      <form action="#" method="post">
+        <fieldset>
+          <label for="name">Name</label>
+          <input type="text" id="name" size="35" class="field" />
+          <label for="email">Email</label>
+          <input type="text" id="email" size="35" class="field" />
+          <label for="comments">How can we help you?</label>
+          <textarea rows="6" cols="60" id="comments" class="field"></textarea>
+          <input type="submit" value="Send message" class="button" />
+        </fieldset>
+      </form>
+    </div>
+  </div>
+  <!-- END MAIN -->
+</div>
+<!-- END WRAPPER -->
+<!-- BEGIN FOOTER -->
+<div id="footer">
+  <ul>
+    <li>&copy;2010 <a href="#">Name Here</a></li>
+    <li>|</li>
+    <li><a href="#">FAQ</a></li>
+    <li>|</li>
+    <li><a href="#">Privacy Policy</a></li>
+    <li>|</li>
+    <li><a href="#">Careers</a></li>
+    <li>|</li>
+    <li><a href="#">Advertise</a></li>
+    <li>|</li>
+    <li><a href="#">Sitemap</a></li>
+    <li>|</li>
+    <li>Designed by <a href="http://www.skyrocketlabs.com/">Skyrocket Labs</a></li>
+  </ul>
+</div>
+<!-- END FOOTER -->
 </body>
 </html>
