--- a/index.html
+++ b/index.html
@@ -1,116 +1,60 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<!DOCTYPE html>
+<html lang="es">
 <head>
-<title>Studio 980</title>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<link href="css/global.css" rel="stylesheet" type="text/css" media="screen" charset="utf-8" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>La Sorda - Editorial</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<!-- BEGIN WRAPPER -->
-<div id="wrapper">
-  <!-- BEGIN LOGO -->
-  <div id="logo"> <a href="#"><img src="img/logo.png" alt="" /></a> </div>
-  <!-- END LOGO -->
-  <!-- BEGIN NAV -->
-  <div id="nav">
+
+  <nav>
+    <h1>La Sorda</h1>
     <ul>
-      <li><a href="#">Page 1</a></li>
-      <li>/</li>
-      <li><a href="#">Page 2</a></li>
-      <li>/</li>
-      <li><a href="#">Page 3</a></li>
-      <li>/</li>
-      <li><a href="#">Page 4</a></li>
+      <li><a href="#acerca">Acerca</a></li>
+      <li><a href="#portafolio">Portafolio</a></li>
+      <li><a href="#contacto">Contacto</a></li>
     </ul>
-  </div>
-  <!-- END NAV -->
-  <!-- BEGIN OVERVIEW -->
-  <div id="overview">
-    <h1>Studio980 is a <a href="#">free XHTML/CSS template</a> by <a href="#">Skyrocket Labs</a>. It's suitable for a simple portfolio site or a media gallery.</h1>
-  </div>
-  <!-- END OVERVIEW -->
-  <!-- BEGIN MAIN -->
-  <div id="main">
-    <div class="left">
-      <h3><a href="#">Cras placerat volutpat nisi vel hendrerit</a></h3>
-      <img src="img/1.jpg" alt="" />
-      <p><a href="#" class="btn">Praesent cursus ipsum &raquo;</a></p>
-    </div>
-    <div class="right">
-      <h3><a href="#">Cras placerat volutpat nisi vel hendrerit</a></h3>
-      <img src="img/2.jpg" alt="" />
-      <p><a href="#" class="btn">Praesent cursus ipsum &raquo;</a></p>
-    </div>
-    <br class="clearit" />
-    <div class="left">
-      <h3><a href="#">Cras placerat volutpat nisi vel hendrerit</a></h3>
-      <img src="img/3.jpg" alt="" />
-      <p><a href="#" class="btn">Praesent cursus ipsum &raquo;</a></p>
-    </div>
-    <div class="right">
-      <h3><a href="#">Cras placerat volutpat nisi vel hendrerit</a></h3>
-      <img src="img/4.jpg" alt="" />
-      <p><a href="#" class="btn">Praesent cursus ipsum &raquo;</a></p>
-    </div>
-    <div class="left">
-      <h3><a href="#">Cras placerat volutpat nisi vel hendrerit</a></h3>
-      <img src="img/5.jpg" alt="" />
-      <p><a href="#" class="btn">Praesent cursus ipsum &raquo;</a></p>
-    </div>
-    <div class="right">
-      <h3><a href="#">Cras placerat volutpat nisi vel hendrerit</a></h3>
-      <img src="img/6.jpg" alt="" />
-      <p><a href="#" class="btn">Praesent cursus ipsum &raquo;</a></p>
-    </div>
-    <div class="left">
-      <h3>Cras placerat volutpat nisi vel hendrerit</h3>
-      <p>Nunc vitae diam nisi, non viverra erat. Vestibulum et justo mauris. Integer sit amet urna vel neque dictum rhoncus. Quisque a volutpat magna. Nunc fringilla varius mauris, at faucibus sem egestas in.</p>
-      <form action="#" method="post">
-        <fieldset>
-          <label for="name">Name</label>
-          <input type="text" id="name" size="35" class="field" />
-          <label for="email">Email</label>
-          <input type="text" id="email" size="35" class="field" />
-          <input type="submit" value="Subscribe" class="button" />
-        </fieldset>
+  </nav>
+
+  <header>
+    <h2>Editorial Independiente</h2>
+    <p>Publicaciones que escuchan desde otro lugar</p>
+  </header>
+
+  <main>
+
+    <section id="acerca">
+      <h3>Acerca de La Sorda</h3>
+      <p>La Sorda es una editorial independiente que publica libros, proyectos visuales y digitales que se relacionan con el pensamiento crítico, los territorios y las prácticas artísticas y experimentales.</p>
+    </section>
+
+    <section id="portafolio">
+      <h3>Portafolio</h3>
+      <div class="grid">
+        <a href="proyectos/proyecto1.html" class="card">Proyecto 1</a>
+        <a href="proyectos/proyecto2.html" class="card">Proyecto 2</a>
+        <a href="proyectos/proyecto3.html" class="card">Proyecto 3</a>
+        <a href="proyectos/proyecto4.html" class="card">Proyecto 4</a>
+        <a href="proyectos/proyecto5.html" class="card">Proyecto 5</a>
+      </div>
+    </section>
+
+    <section id="contacto">
+      <h3>Contacto</h3>
+      <form name="contacto" method="POST" data-netlify="true">
+        <input type="text" name="nombre" placeholder="Tu nombre" required />
+        <input type="email" name="email" placeholder="Tu correo" required />
+        <textarea name="mensaje" rows="5" placeholder="Tu mensaje" required></textarea>
+        <button type="submit">Enviar</button>
       </form>
-    </div>
-    <div class="right">
-      <h3>Cras placerat volutpat nisi vel hendrerit</h3>
-      <form action="#" method="post">
-        <fieldset>
-          <label for="name">Name</label>
-          <input type="text" id="name" size="35" class="field" />
-          <label for="email">Email</label>
-          <input type="text" id="email" size="35" class="field" />
-          <label for="comments">How can we help you?</label>
-          <textarea rows="6" cols="60" id="comments" class="field"></textarea>
-          <input type="submit" value="Send message" class="button" />
-        </fieldset>
-      </form>
-    </div>
-  </div>
-  <!-- END MAIN -->
-</div>
-<!-- END WRAPPER -->
-<!-- BEGIN FOOTER -->
-<div id="footer">
-  <ul>
-    <li>&copy;2010 <a href="#">Name Here</a></li>
-    <li>|</li>
-    <li><a href="#">FAQ</a></li>
-    <li>|</li>
-    <li><a href="#">Privacy Policy</a></li>
-    <li>|</li>
-    <li><a href="#">Careers</a></li>
-    <li>|</li>
-    <li><a href="#">Advertise</a></li>
-    <li>|</li>
-    <li><a href="#">Sitemap</a></li>
-    <li>|</li>
-    <li>Designed by <a href="http://www.skyrocketlabs.com/">Skyrocket Labs</a></li>
-  </ul>
-</div>
-<!-- END FOOTER -->
+    </section>
+
+  </main>
+
+  <footer>
+    <p>© 2025 La Sorda Editorial</p>
+  </footer>
+
 </body>
 </html>
