--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -10,16 +9,15 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div class="desktop-home-1">
-<div class="rectangle-3-2">
-  <p class="cuerpo-prueba"><span class="text-black">Bold</span></p>
-<p class="cuerpo-prueba"><span class="text-black">Lorem ipsum dolor sit amet consectetur. Semper vitae tortor eu quam maecenas eget. Viverra aenean nibh scelerisque vulputate gravida tellus bibendum gravida vitae. Faucibus sit tincidunt dolor in pulvinar vitae malesuada. Sed convallis faucibus purus commodo aenean sem sed tortor sit. Mollis arcu at enim pharetra nulla scelerisque ultricies dui. Gravida nunc neque nunc porta aenean pharetra ut amet id. Augue risus sit at habitasse. Hendrerit viverra viverra volutpat id varius.</span></p>
-</div>
+<div class="homee-1">
+<img src="images/rectangle-3-2.svg" class="rectangle-3-2" alt="rectangle-3" />
 <div class="rectangle-4-3"></div>
 <div class="rectangle-5-4"></div>
 <div class="rectangle-6-5"></div>
 <div class="rectangle-7-6"></div>
 <div class="rectangle-8-7"></div>
+<p class="cuerpo-prueba"><span class="text-black">Bold</span></p>
+<p class="cuerpo-prueba"><span class="text-black">Lorem ipsum dolor sit amet consectetur. Semper vitae tortor eu quam maecenas eget. Viverra aenean nibh scelerisque vulputate gravida tellus bibendum gravida vitae. Faucibus sit tincidunt dolor in pulvinar vitae malesuada. Sed convallis faucibus purus commodo aenean sem sed tortor sit. Mollis arcu at enim pharetra nulla scelerisque ultricies dui. Gravida nunc neque nunc porta aenean pharetra ut amet id. Augue risus sit at habitasse. Hendrerit viverra viverra volutpat id varius.</span></p>
 </div>
 
 </body>
